[gd_scene load_steps=11 format=2]

[ext_resource path="res://modules/ui/Bonus.gd" type="Script" id=1]
[ext_resource path="res://game/assets/ui/BontonPelleWater.png" type="Texture" id=3]
[ext_resource path="res://game/assets/ui/BontonPelleNormal.png" type="Texture" id=4]
[ext_resource path="res://game/assets/ui/BontonPelleSable.png" type="Texture" id=5]
[ext_resource path="res://game/assets/sounds/new_ui/UI_Brush-002.ogg" type="AudioStream" id=6]
[ext_resource path="res://game/assets/sounds/new_ui/UI_Brush-001.ogg" type="AudioStream" id=9]
[ext_resource path="res://game/assets/sounds/new_ui/UI_Brush-003.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "paint_hot"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bonus/PaintHot:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 20.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "paint_temperate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bonus/PaintTemperate:rect_rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 20.0 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bonus/PaintWater:rect_rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0, 20.0 ]
}

[node name="Bonus" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
bonus_thresholds = [ 0.0, 20.0, 40.0 ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/paint_hot = SubResource( 1 )
anims/paint_temperate = SubResource( 2 )
anims/paint_water = SubResource( 3 )

[node name="Bonus" type="HBoxContainer" parent="."]
visible = false
margin_left = 142.544
margin_top = 90.8717
margin_right = 482.544
margin_bottom = 240.872
rect_scale = Vector2( 1, -1 )
rect_pivot_offset = Vector2( 32, 32 )
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaintWater" type="TextureButton" parent="Bonus"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
rect_pivot_offset = Vector2( 90, 80 )
mouse_filter = 1
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaintTemperate" type="TextureButton" parent="Bonus"]
margin_left = 190.0
margin_right = 340.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
rect_pivot_offset = Vector2( 90, 80 )
mouse_filter = 1
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaintHot" type="TextureButton" parent="Bonus"]
visible = false
margin_left = 380.0
margin_right = 530.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
rect_pivot_offset = Vector2( 90, 80 )
mouse_filter = 1
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brush1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Brush2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Brush3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="pressed" from="Bonus/PaintWater" to="." method="_on_PaintWater_pressed"]
[connection signal="pressed" from="Bonus/PaintTemperate" to="." method="_on_PaintTemperate_pressed"]
[connection signal="pressed" from="Bonus/PaintHot" to="." method="_on_PaintHot_pressed"]
